# desafio-backend-main

./: README.md  alembic.ini  config.py  pyproject.toml
app/: __init__.py
app/controllers/: git_analysis_controller.py  search_commits_controller.py
app/db/: git_analytics_results.db  session.py
app/db/migrations/versions/: 4edd80c3a1e4_subindo_projeto.py
app/models/: analise_git_model.py
app/utils/: hidefile.py
app/views/: git_analysis_view.py  search_commit_view.py
tests/: test_routes.py
